kubernetes/app-todo-db-deployment.yaml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
  labels:
    app: todo-db
    tier: database
spec:
  selector: # mysql Pod Should contain same labels
    matchLabels:
      app: todo-db
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: todo-db
        tier: database
    spec:
      containers:
        - image: shoon2430/mariadb:v1 # image from docker-hub
          # args:
          #   - "--ignore-db-dir=lost+found" # Workaround for https://github.com/docker-library/mysql/issues/186
          name: todo-db
          ports:
            - containerPort: 3306
              name: todo-db
          volumeMounts: # Mounting voulume obtained from Persistent Volume Claim
            - name: todo-db-persistent-storage
              mountPath: /var/lib/mysql #This is the path in the container on which the mounting will take place.
      volumes:
        - name: todo-db-persistent-storage # Obtaining 'vloume' from PVC
          persistentVolumeClaim:
            claimName: todo-db-pv-claim
