kubernetes/app-todo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-todo-deployment
spec:
  selector:
    matchLabels:
      app: spring-todo
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-todo
    spec:
      containers:
        - name: spring-todo
          image: shoon2430/account-todo:v1
          ports:
            - containerPort: 9002
