kubernetes/app-todo-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: spring-todo-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  type: NodePort
  ports:
    - port: 9002
      targetPort: 9002
      protocol: TCP
      name: server-port
  selector:
    app: spring-todo
