kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "spring-server-ingress"
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /api/todos*
            backend:
              serviceName: "spring-todo-service"
              servicePort: 9002
          - path: /api/accounts*
              backend:
                serviceName: "spring-account-service"
                servicePort: 9005
